# nyks-wallet

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCY_GUIDE.md  DEPLOYMENT.md  Database.md  Deployement.md  Deployment.md  Dockerfile  Dockerfile.mcp  Document.md  MCP_SERVER.md  OrderFlow.md  OrderWallet.md  OrderWalletUpdated.md  QuickStart.md  README.md  Validator-Wallet.md  build.rs  example_database_usage.md  example_secure_usage.md  install.ps1  install.sh  test1.json  validator_sign.rs
.cargo/: config.toml
.claude/skills/: twilight-trader.md
.github/workflows/: release.yaml
docs/: agent-skill-relayer-cli-compact.md  agent-skill-relayer-cli.md  btc-onboarding.md  cli-command-rules.md  order-lifecycle.md  relayer-cli.md
examples/trading_bot/: .env.example  Cargo.toml  INTEGRATION_SUMMARY.md  LENDING_BOT_FIXES.md  MARKET_DATA_DEMO.md  MOMENTUM_TRADER_FIXES.md  ORDER_VALIDATION_FIXES.md  README.md  USAGE_DEMO.md  ZKOS_FIXES.md  env.example
examples/trading_bot/docs/: README.md  lending_bot.md  main.md  momentum_trader.md  random_trades.md  simple_market_maker.md  test_market_data.md
examples/trading_bot/src/: lending_bot.rs  main.rs  momentum_trader.rs  random_trades.rs  simple_market_maker.rs  test_market_data.rs
migrations/00000000000001_create_zk_accounts/: down.sql  up.sql
migrations/00000000000002_create_encrypted_wallets/: down.sql  up.sql
migrations/00000000000003_create_order_wallets/: down.sql  up.sql
migrations/00000000000004_create_utxo_details/: down.sql  up.sql
migrations/00000000000005_create_request_ids/: down.sql  up.sql
migrations/00000000000006_create_order_history/: down.sql  up.sql
migrations/00000000000007_create_transfer_history/: down.sql  up.sql
migrations/00000000000008_add_network_type/: down.sql  up.sql
migrations/00000000000009_create_btc_deposits_withdrawals/: down.sql  up.sql
migrations/00000000000010_create_btc_transfers/: down.sql  up.sql
migrations/00000000000011_add_tx_type_to_zk_accounts/: down.sql  up.sql
migrations/00000000000012_add_reserve_id_to_btc_deposits/: down.sql  up.sql
migrations/00000000000013_add_btc_tx_hash_to_deposits/: down.sql  up.sql
proto/nyks/bridge/: events.proto  genesis.proto  params.proto  query.proto  tx.proto
proto/nyks/forks/: attestation.proto  events.proto  genesis.proto  params.proto  query.proto  tx.proto
proto/nyks/volt/: clearing.proto  deposit.proto  events.proto  fragment.proto  genesis.proto  params.proto  query.proto  reserve.proto  tx.proto  withdraw.proto
proto/nyks/zkos/: events.proto  genesis.proto  params.proto  query.proto  tx.proto
src/: config.rs  error.rs  faucet.rs  lib.rs  main.rs  nyks_fn.rs  test.rs  validator_wallet.rs  wallet.rs
src/database/: backup.rs  connection.rs  mod.rs  models.rs  operations.rs  schema.rs
src/nyks_rpc/: mod.rs
src/nyks_rpc/rpcclient/: method.rs  mod.rs  txrequest.rs  txresult.rs  utils.rs
src/nyks_rpc/rpcclient/json_rpc/: mod.rs  version.rs
src/relayer_module/: error.rs  mod.rs  nonce_manager.rs  order_wallet.rs  portfolio.rs  relayer_api.rs  relayer_order.rs  relayer_types.rs  transaction_history.rs  utils.rs
src/security/: keyring_store.rs  mod.rs  password.rs  secure_tty.rs  wallet_security.rs
src/wallet/: btc_key.rs  faucet.rs  generate_btc_key.rs  mod.rs  nyks_fn.rs  seed_signer.rs  wallet.rs
src/wallet/btc_wallet/: balance.rs  btc_wallet.rs  keys.rs  mod.rs  send.rs  types.rs  validation.rs
src/zkos_accounts/: encrypted_account.rs  mod.rs  zkaccount.rs
