[package]
name = "nyks-wallet"
version = "0.1.0"
edition = "2024"

[lib]
name = "nyks_wallet"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0"
base64 = "0.22"
bip32 = { version = "0.5", default-features = false, features = ["bip39"] }
cosmrs = "0.15"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
hex = "0.4"
prost = "0.12"
prost-types = "0.12"
chrono = "0.4"

#  json rpc dependencies #########################################################
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
jsonrpc = "0.17.0"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
serde-this-or-that = "0.4.2"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
# #########################################################


ripemd = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rpassword = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
fastrand = "2.0"
bip39 = { version = "2.2.0", features = ["rand"] }
dotenv = "0.15"
serial_test = "2"
curve25519-dalek = { version = "3", default-features = false }
rand = "0.7"
tendermint-rpc = { version = "0.34", features = ["http-client"] }
[dependencies.twilight-client-sdk]
git = "https://github.com/twilight-project/twilight-client-sdk.git"
branch = "zk-account"
# path = "../twilight-client-sdk_zkaccount"

[dependencies.utxo-in-memory]
git = "https://github.com/twilight-project/zkos-rust.git"
branch = "develop"
[dependencies.address]
git = "https://github.com/twilight-project/zkos-rust.git"
branch = "develop"

[build-dependencies]
prost-build = "0.12"
